--- a/templates/profil/index.html.twig
+++ b/templates/profil/index.html.twig
@@ -13,22 +13,23 @@
     </div>
 
     <!-- BLOCK START-->
-    <div class="md:flex no-wrap px-10 sm:max-w-max sm:mr-2">
+    <div class="px-10 sm:mr-2 
+                flex flex-wrap">
         <!-- Left Side -->
         <div class="md:mx-2">
 
             <!-- Profil Card -->
-            <div class="bg-white pt-5 pb-8 px-5 rounded-tl-lg rounded-bl-lg border-t-4 border-green-500">
+            <div class="bg-white pt-5 pb-8 px-5 rounded-tl-lg rounded-bl-lg border-t-4 border-green-500 max-w-max dark:dark:bg-slate-900 dark:text-white">
                 <div class="image overflow-hidden my-4 max-w-xs ">
                     <img class="h-auto w-full mx-auto"
                         src="{{ user.picture}}"
                         alt="">
                 </div>
-                <h1 class="text-gray-900 font-bold text-xl leading-8 my-1">{{ user.firstname}} {{ user.lastname}}</h1>
-                <h3 class="text-gray-600 font-lg text-semibold leading-6">{{ user.job.name}}</h3>
-                <p class="text-sm text-gray-500 hover:text-gray-600 leading-6">Département : {{ user.departement.name}}</p>
+                <h1 class="text-gray-900 dark:text-white font-bold text-xl leading-8 my-1">{{ user.firstname}} {{ user.lastname}}</h1>
+                <h3 class="text-gray-600 dark:text-white font-lg text-semibold leading-6">{{ user.job.name}}</h3>
+                <p class="text-sm dark:text-white text-gray-500 leading-6">Département : {{ user.departement.name}}</p>
                 <ul
-                    class="bg-gray-100 text-gray-600 hover:text-gray-700 hover:shadow py-2 px-3 mt-5 divide-y rounded shadow-sm">
+                    class="bg-gray-100 text-gray-600 hover:text-gray-700 hover:shadow py-2 px-3 mt-5 divide-y rounded shadow-sm dark:dark:bg-slate-800 dark:text-white">
                     <li class="flex items-center py-3">
                         <span>Status</span>
                         <span class="ml-auto"><span
@@ -45,11 +46,12 @@
         </div>
 
         <!-- Right Side -->
-        <div class="max-w-max w-full ">
+        <div class="max-w-max ">
             
             <!-- Section A propos-->
-            <div class="bg-white p-4 shadow-sm rounded-tr-lg rounded-br-lg border-t-4 border-green-500">
-                <div class="flex items-center space-x-2 font-semibold text-gray-900 leading-8 my-4">
+            <div class="bg-white p-4 shadow-sm rounded-tr-lg rounded-br-lg border-t-4 border-green-500 max-w-max dark:dark:bg-slate-900 dark:text-white">
+                
+                <div class="flex items-center space-x-2 font-semibold text-gray-900 dark:text-white leading-8 my-4">
                     <span clas="text-green-500">
                         <svg class="h-5" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
                             stroke="currentColor">
@@ -59,49 +61,50 @@
                     </span>
                     <span class="tracking-wide">A propos</span>
                 </div>
-                <div class="text-gray-700">
+                
+                <div class="text-gray-700 w-[60rem] dark:text-white">
                     <div class="grid md:grid-cols-2 text-sm">
-                        <div class="grid grid-cols-2 border-b border-slate-200 py-2 ">
+                        <div class="grid grid-cols-2 border-b border-slate-200 dark:border-slate-600 py-2 ">
                             <div class="px-4 py-2 font-semibold">Prénom</div>
                             <div class="px-4 py-2">{{ user.firstname }}</div>
                         </div>
-                        <div class="grid grid-cols-2 border-b border-slate-200 py-2">
+                        <div class="grid grid-cols-2 border-b border-slate-200 dark:border-slate-600 py-2">
                             <div class="px-4 py-2 font-semibold">Nom</div>
                             <div class="px-4 py-2">{{ user.lastname }}</div>
                         </div>                        
-                        <div class="grid grid-cols-2 border-b border-slate-200 py-2">
+                        <div class="grid grid-cols-2 border-b border-slate-200 dark:border-slate-600 py-2">
                             <div class="px-4 py-2 font-semibold">Téléphone privé</div>
                             <div class="px-4 py-2">{{ user.phonenumber }}</div>
                         </div>
-                        <div class="grid grid-cols-2 border-b border-slate-200 py-2">
+                        <div class="grid grid-cols-2 border-b border-slate-200 dark:border-slate-600 py-2">
                             <div class="px-4 py-2 font-semibold">Téléphone professionnel</div>
                             <div class="px-4 py-2">{{ user.phonenumberpro }}</div>
                         </div>
-                        <div class="grid grid-cols-2 border-b border-slate-200 py-2">
+                        <div class="grid grid-cols-2 border-b border-slate-200 dark:border-slate-600 py-2">
                             <div class="px-4 py-2 font-semibold">Adresse</div>
-                            <div class="px-4 py-2">{{ user.address }}</div>
+                            <div class="px-4 py-2 whitespace-normal ">{{ user.address }}</div>
                         </div>
-                        <div class="grid grid-cols-2 border-b border-slate-200 py-2">
+                        <div class="grid grid-cols-2 border-b border-slate-200 dark:border-slate-600 py-2">
                             <div class="px-4 py-2 font-semibold">Code postal et ville</div>
                             <div class="px-4 py-2">{{ user.zipcode }} {{ user.city }}</div>
                         </div>
-                        <div class="grid grid-cols-2 border-b border-slate-200 py-2">
+                        <div class="grid grid-cols-2 border-b border-slate-200 dark:border-slate-600 py-2">
                             <div class="px-4 py-2 font-semibold">Email privé</div>
                             <div class="px-4 py-2">
-                                <a class="text-blue-800" href="mailto:jane@example.com">{{ user.email }}</a>
+                                <a class="text-blue-800 dark:text-blue-400" href="mailto:{{ user.email }}">{{ user.email }}</a>
                             </div>
                         </div>
-                        <div class="grid grid-cols-2 border-b border-slate-200 py-2">
+                        <div class="grid grid-cols-2 border-b border-slate-200 dark:border-slate-600 py-2">
                             <div class="px-4 py-2 font-semibold">Email pro</div>
                             <div class="px-4 py-2">
-                                <a class="text-blue-800" href="mailto:jane@example.com">{{ user.emailpro }}</a>
+                                <a class="text-blue-800 dark:text-blue-400" href="mailto:{{ user.emailpro }}">{{ user.emailpro }}</a>
                             </div>
                         </div>
-                        <div class="grid grid-cols-2 border-b border-slate-200 py-2">
+                        <div class="grid grid-cols-2 border-b border-slate-200 dark:border-slate-600 py-2">
                             <div class="px-4 py-2 font-semibold">Anniversaire</div>
                             <div class="px-4 py-2">{{ user.dateOfBirth|date("m/d/Y") }}</div>
                         </div>
-                        <div class="grid grid-cols-2 border-b border-slate-200 py-2">
+                        <div class="grid grid-cols-2 border-b border-slate-200 dark:border-slate-600 py-2">
                             <div class="px-4 py-2 font-semibold"></div>
                             <div class="px-4 py-2">{# RIB #}</div>
                         </div>
