--- a/templates/sidebar.html.twig
+++ b/templates/sidebar.html.twig
@@ -22,7 +22,7 @@
                                 hover:font-semibold
                                 hover:text-white
                                 hover:bg-blue-600
-                                focus:bg-gradient-to-r from-blue-600 via-purple-500 to-pink-600
+                                focus:bg-gradient-to-tl from-green-400 via-sky-600 to-indigo-900
                                 focus:text-white
                                 relative flex-row h-11 focus:outline-none
                                 py-4">
@@ -46,7 +46,7 @@
                                 hover:font-semibold
                                 hover:text-white
                                 hover:bg-blue-600
-                                focus:bg-gradient-to-r from-blue-600 via-purple-500 to-pink-600
+                                focus:bg-gradient-to-tl from-green-400 via-sky-600 to-indigo-900
                                 focus:text-white
                                 relative flex-row h-11 focus:outline-none
                                 py-4">
@@ -70,7 +70,7 @@
                                 hover:font-semibold
                                 hover:text-white
                                 hover:bg-blue-600
-                                focus:bg-gradient-to-r from-blue-600 via-purple-500 to-pink-600
+                                focus:bg-gradient-to-tl from-green-400 via-sky-600 to-indigo-900
                                 focus:text-white
                                 relative flex-row h-11 focus:outline-none
                                 py-4">
@@ -95,7 +95,7 @@
                                 hover:font-semibold
                                 hover:text-white
                                 hover:bg-blue-600
-                                focus:bg-gradient-to-r from-blue-600 via-purple-500 to-pink-600
+                                focus:bg-gradient-to-tl from-green-400 via-sky-600 to-indigo-900
                                 focus:text-white
                                 relative flex-row h-11 focus:outline-none
                                 py-4">
@@ -121,7 +121,7 @@
                                 hover:font-semibold
                                 hover:text-white
                                 hover:bg-blue-600
-                                focus:bg-gradient-to-r from-blue-600 via-purple-500 to-pink-600
+                                focus:bg-gradient-to-tl from-green-400 via-sky-600 to-indigo-900
                                 focus:text-white
                                 relative flex-row h-11 focus:outline-none
                                 py-4">
@@ -146,7 +146,7 @@
                                 hover:font-semibold
                                 hover:text-white
                                 hover:bg-blue-600
-                                focus:bg-gradient-to-r from-blue-600 via-purple-500 to-pink-600
+                                focus:bg-gradient-to-tl from-green-400 via-sky-600 to-indigo-900
                                 focus:text-white
                                 relative flex-row h-11 focus:outline-none
                                 py-4">
@@ -170,7 +170,7 @@
                                 hover:font-semibold
                                 hover:text-white
                                 hover:bg-blue-600
-                                focus:bg-gradient-to-r from-blue-600 via-purple-500 to-pink-600
+                                focus:bg-gradient-to-tl from-green-400 via-sky-600 to-indigo-900
                                 focus:text-white
                                 relative flex-row h-11 focus:outline-none
                                 py-4">
@@ -219,7 +219,7 @@
                                     hover:font-semibold
                                     hover:text-white
                                     hover:bg-blue-600
-                                    focus:bg-gradient-to-r from-blue-600 via-purple-500 to-pink-600
+                                    focus:bg-gradient-to-tl from-green-400 via-sky-600 to-indigo-900
                                     focus:text-white
                                     relative flex-row h-11 focus:outline-none
                                     py-4">
@@ -244,7 +244,7 @@
                                     hover:font-semibold
                                     hover:text-white
                                     hover:bg-blue-600
-                                    focus:bg-gradient-to-r from-blue-600 via-purple-500 to-pink-600
+                                    focus:bg-gradient-to-tl from-green-400 via-sky-600 to-indigo-900
                                     focus:text-white
                                     relative flex-row h-11 focus:outline-none
                                     py-4">
