--- a/templates/sidebar.html.twig
+++ b/templates/sidebar.html.twig
@@ -4,10 +4,16 @@
     
 <!-- !Sidebar responsive TEST-->
 <div class="fixed flex flex-col w-14 hover:w-64 md:w-64  bg-slate-200 h-full  transition-all duration-300 border-none z-10 sidebar dark:bg-slate-900 dark:text-white">
-    
-  <div class="xl:flex justify-start p-10 items-center space-x-3 ">
-    <p class="text-2xl leading-6 ">QuickWork</p>
+
+  <!-- Title -->
+  <div class="flex justify-start p-10 items-center space-x-3 -ml-12 md:m-auto">
+        <a href="{{ path('home') }}" class="md:text-4xl text-base text-white font-bold z-20 mx-auto flex flex-col text-center"> Quick
+            <span class="before:block before:absolute before:-inset-y-1 before:-inset-x-0 before:-skew-y-3 before:bg-blue-900 relative inline-block z-10 md:m-2 m-1">
+                <span class="relative text-white p-2.5">Work</span>
+            </span>
+        </p>
   </div>
+  
 
   <!-- Liste des liens de navigation -->
   <div class="px-2 w-full">  
