--- a/templates/bundles/TwigBundle/Exception/error404.html.twig
+++ b/templates/bundles/TwigBundle/Exception/error404.html.twig
@@ -6,7 +6,7 @@
 
 {% block content %}
 <!-- !Partie centrale-->
-<div class="fixed flex flex-col h-full  bg-slate-100 dark:bg-slate-800 dark:text-white w-full  ">
+<div class="fixed flex flex-col h-full  bg-slate-100 w-full  ">
   <div class="bg-gradient-to-tl from-green-400 to-indigo-900 w-full h-screen flex justify-center items-center">
     <div class ="bg-slate-200 p-8 shadow-2xl rounded-md">
         <p class="text-center text-8xl font-bold text-indigo-700 mb-4"  >404</p>
