--- a/templates/bundles/TwigBundle/Exception/error403.html.twig
+++ b/templates/bundles/TwigBundle/Exception/error403.html.twig
@@ -9,6 +9,7 @@
   <div class="bg-gradient-to-tl from-green-400 to-indigo-900 w-full h-screen flex justify-center items-center">
     <div class ="bg-slate-200 p-8 shadow-2xl rounded-md">
         <p class="text-center text-7xl font-bold text-indigo-700 mb-4">403</p>
+        <p class="text-center text-2xl font-bold text-indigo-700 mb-4">Accès Refusé</p>
         <div class = "flex justify-center">
           <img src="https://media0.giphy.com/media/hHh2lqWFeHYBO/giphy.gif?cid=ecf05e474ifsrjqd2vxpwg2r3ikw0wnkzwimyy4rdl5q8p4g&rid=giphy.gif&ct=g" alt="Access Denied"> 
         </div>
