--- a/templates/planning/departement.planning.html.twig
+++ b/templates/planning/departement.planning.html.twig
@@ -10,7 +10,7 @@
   <!-- Title (accueil) -->
   <div class="pl-24 py-14 pt-24">
       <p class="text-4xl">Planning du département :</p>
-      <p class="text-2xl indent-8">{{dpt.name}}</p>
+      <p class="text-2xl indent-8">{{userLogged.departement.name}}</p>
   </div>
   <div class="pl-24">
     <a href="{{ path('planned_work_days_new')}}" class="block max-w-fit text-white bg-blue-600 font-semibold rounded-lg hover:bg-blue-900 hover:text-white focus:outline-none p-3 my-10 focus:bg-gradient-to-tl from-green-400 via-sky-600 to-indigo-900 focus:text-white">Nouveau planning</a>
@@ -63,7 +63,9 @@
                     <th class="border-t p-4 pl-8 text-slate-400 dark:text-slate-200">Fin de pause repas</th>
                     <th class="border-t p-4 pl-8 text-slate-400 dark:text-slate-200">Fin de journée</th>
                     <th class="border-t p-4 pl-8 text-slate-400 dark:text-slate-200">Heures planifiées</th>
+                    {% if dptUser[i].id != userLogged.id %}
                     <th class="border-r border-t p-4 pl-8 pr-8 text-slate-400 dark:text-slate-200">Modifier</th>
+                    {% endif %}
                 </tr>
             </thead>
             <tbody class="bg-white dark:bg-slate-800">
@@ -77,8 +79,10 @@
                     <td class="border-b border-slate-100 dark:border-slate-700 p-4 pl-8 dark:text-slate-200">{{ user.endlunch ? user.endlunch|date('H:i') : '' }}</td>
                     <td class="border-b border-slate-100 dark:border-slate-700 p-4 pl-8 dark:text-slate-200">{{ user.endshift ? user.endshift|date('H:i') : '' }}</td>
                     <td class="border-b border-slate-100 dark:border-slate-700 p-4 pl-8 dark:text-slate-200">{{ user.hoursplanned ? user.hoursplanned|date('H:i') : '' }}</td>
-                     {# Ajout du bouton edit #}
+                    {% if dptUser[i].id != userLogged.id %}
+                    {# Ajout du bouton edit #}
                     <td class="border-b border-slate-100 dark:border-slate-700 p-4 pl-8 dark:text-slate-200"><a href="{{ path('planned_work_days_edit', {'id': user.id}) }}">&#9998;</a></td>
+                    {% endif %}
                 </tr>
                 {% endfor %}
             </tbody>
